<resources>
    <string name="app_name" translatable="false">Stroke Rate Coach</string>
    <string name="stopper_button_text">stop</string>
    <string name="initial_spm" translatable="false">00</string>
    <string name="default_kph" translatable="false">000.0 hours/hour</string>
    <string name="use_metric_units" translatable="false">Use metric units?</string>
    <string name="create_workout_button_label">Create workout</string>
    <string name="edit_workout_button_label">Update workout</string>
    <string name="speed_label">Speed</string>
    <string name="min_speed_label">Min Speed</string>
    <string name="workout_name_title">Workout name:</string>
    <string name="workout_desc_tooltip">Add workout description?</string>
    <string name="button_add_phase_label">+ Phase</string>
    <string name="gear_title_text">at</string>
    <string name="phase_title_text">Phase</string>
    <string name="tpp_title_text">Time</string>
    <string name="dpp_title_text">Distance</string>
    <string name="empty_data_notification">Skipping empty phases…</string>
    <string name="meters">metres</string>
    <string name="seconds">seconds</string>
    <string name="strokes">strokes</string>
    <string name="workout_unit_choose_title">Choose workout unit:</string>
    <string name="empty_workout_warning">Empty workout not created.</string>
    <string name="missing_workout_type_warning">Please select workout unit (strokes, meters or seconds)</string>
    <string name="entry_form_label">Enter new workout</string>
    <string name="workout_in_progress">Workout in progress</string>
    <string name="path_circle" translatable="false">
    M 50,50
    m -48,0
    a 1,1 0 1,0 96,0
    a 1,1 0 1,0 -96,0
  </string>
    <string name="speed_dial_title">Speed Dial</string>
    <string name="workouts_title">Workouts</string>
    <string name="history_title">History</string>
    <string name="trash_title">Recycler</string>
    <string name="minimum_speed_warning">Low Speed Alarm</string>
    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_500m">/500m</string>
    <string name="preset_added">Preset saved.</string>
    <string name="preset_add_failed">Sorry, preset add failed.</string>
    <string name="gps_lock_text">Locking on starting GPS location…</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>
    <string name="beep_sound_default" translatable="false">default</string>
    <string name="file_picker_key" translatable="false">file-picker</string>
    <string name="latest_version_key" translatable="false">latest-version</string>
    <string name="beep_sound_list_key" translatable="false">beep-sound</string>
    <string name="use_location_key" translatable="false">use-location</string>
    <string name="notification_preference_key" translatable="false">use-in-background</string>
    <string name="countdown_setting_key" translatable="false">countdown-duration</string>
    <string name="countdown_setting_title">Countdown duration (seconds)</string>
    <string name="starting_loc_accuracy_setting_key" translatable="false">starting-loc-accuracy</string>
    <string name="starting_loc_accuracy_setting_title">Starting GPS accuracy (metres)</string>
    <string name="starting_loc_accuracy_setting_desc">Acceptable GPS standard deviation for starting workout (only for distance workouts). \nLower = better accuracy\nHigher = faster start</string>
    <string name="speed_sample_count_setting_key" translatable="false">speed-sample-count</string>
    <string name="speedometer_sample_length_setting_title">Speedometer sample length (GPS fixes)</string>
    <string name="speedometer_sample_count_setting_desc">Measure speed for starting n fixes back.\nMore fixes = accurate speed\nFewer fixes = quick and responsive speed</string>
    <string name="theme_setting_key" translatable="false">theme</string>
    <string name="dark_theme_setting_title">Night mode</string>
    <string name="menu_text">MENU…</string>
    <string name="help_intro1"><i><b>StrokeRateCoach</b></i> is a rowing app that beeps at a desired rate per minute - in other words, a <i><b>metronome</b></i>.
    </string>
    <string name="help_intro2">Simple SPM (Strokes Per Minute) rate setting is supported, as well as complex workouts based on distance, time or stroke count.
    </string>
    <string name="help_intro3">StrokeRateCoach will happily beep from the background, so feel free to combine it with other sports apps! Make sure to enable background function in settings.</string>
    <string name="help_how_to_title">How To…</string>
    <string name="help_how_to_simple_beep1">- Simple beeper</string>
    <string name="help_how_to_simple_beep2">Go to \'SPEED DIAL\' and enter desired SPM. The beeping starts automatically upon dialing the second digit. Supported SPM rates from 10 to 99.
    </string>
    <string name="help_how_to_preset1">- Preset workout</string>
    <string name="help_how_to_preset2">Go to \'WORKOUTS\' or \'HISTORY\' and tap the \'PLAY\' button of the desired workout.
        Hint: distance is measured at a straight line from the phase/leg start point - may be unsuitable for tracks with turns.</string>
    <string name="help_how_to_speed1">- Speed monitor &amp; control</string>
    <string name="help_how_to_speed2">While the beeper is running, two readings are visible in the upper part of the screen:</string>
    <string name="help_how_to_speed3">\'Speed\' shows your current speed, based on the distance covered for the last few GPS fixes (10 by default).</string>
    <string name="help_how_to_speed4">\'Min Speed\' shows the current speed warning threshold. If on, it will sound a warning as long as your current speed is below that level. Tap to enable and set minimum speed threshold.</string>
    <string name="help_how_to_create1">- Creating a new workout</string>
    <string name="help_how_to_create2">Tap the menu button (\'⋮\') while the beeper is stopped, then tap \'Create workout\'.
        Choose \'strokes\', \'metres\' or \'seconds\' for workout unit, enter a workout name and then enter data for all workout legs/phases:
        \nThe first (left hand) field of each phase for phase duration.
        \nThe second (right hand) for SPM rate of that phase.</string>
    <string name="help_how_to_create3">Example: to create a 2000m workout comprising 4 legs of 500m each at 22/24/26/28 SPM, create 4 phases and put \'500\' in the left hand field for each phase.
        Then, in the right hand field, put 22 for the first phase, then 24 for the second, 26 for the third and 28 for the fourth phase.</string>
    <string name="help_about1">About</string>
    <string name="help_about2">This app created by batyanko, enthusiast rower and android developer.
        Any questions and feedback welcome, especially bug reports. I read all e-mail ;)</string>
    <string name="help_about3">E-mail\nbatyankodev@gmail.com</string>
    <string name="help_about4">Web\nwww.batyanko.com</string>
    <string name="help_about5">Github\ngithub.com/batyanko/stroke-rate-coach</string>
    <string name="help_license1">License</string>
    <string name="help_license2">StrokeRateCoach is being developed under the Apache 2.0 license http://www.apache.org/licenses/LICENSE-2.0 .
        Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="help_license3">Parts of code from other developers have been used and annotated where necessary.
        These parts are licensed under either Apache 2.0 or CC BY-SA 3.0 http://creativecommons.org/licenses/by-sa/3.0</string>
    <string name="help_privacy1">Privacy Policy</string>
    <string name="help_privacy2">The StrokeRateCoach app stores a database with your saved and used workouts (entered workout data including unit, name, description, phase length and rate, as well as creation and use timestamp).
        This data is not shared with anyone and can be erased at will using the \'delete\' (bin) button found next to each workout entry.</string>
    <string name="help_privacy3">To enable distance and speed measurement, the StrokeRateCoach app makes temporary use of your precise location.
        This location information is neither stored on persistent storage nor disclosed to third parties.</string>
    <string name="help_privacy4"> The StrokeRateCoach app uses no internet connection.</string>
    <string name="help_location1">Location Access</string>
    <string name="help_location2">StrokeRateCoach can access your precise location to enable distance-based workouts and speed indication.</string>
    <string name="help_location3">Do you want to enable location usage?</string>
    <string name="notification_pref_summary">Work in the background and use a notification to access it.\nThis way you can combine it with other sport apps./n(The Android operating system may still decide to stop the background service though, to free up memory).</string>
    <string name="notification_desc1">StrokeRateCoach can beep from the background, so you can combine it with other sport apps. (Using notification to access it).</string>
    <string name="notification_desc2">Enable background functionality?</string>
    <string name="about_title">About</string>
    <string name="main_notification_channel_name">Workout running</string>
    <string name="welcome_text1">Hi there!</string>
    <string name="welcome_text2" translatable="false">" "</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="not_fine">Disagree</string>
    <string name="use_location_text">Use Location</string>
    <string name="use_no_location_text">Don\'t Use Location</string>
    <string name="work_in_background_yes_text">Enable</string>
    <string name="work_in_background_no_text">Disable</string>
    <string name="use_location_text_description">Necessary for speed measurement and distance workouts.</string>
    <string name="custom_sound_title">Custom Beep Sound</string>
    <string name="beep_sound_screen_key" translatable="false">custom-sound</string>
    <string name="custom_sound_path" translatable="false">custom-sound-path</string>
    <string name="engage_workout">Engage workout</string>
    <string name="edit_workout">Edit workout</string>
    <string name="delete_workout">Delete workout</string>
    <string name="menu_image">Details image</string>
    <string name="backup_title">Backup/Restore</string>
    <string name="backup_howto" translatable="false">You can backup your workout presets by copy / paste.\n\n- To create a backup of all presets, hit CREATE(COPY). All presets will be copied as text, which you can paste in your favorite app (like e-mail or docs/notes).\n\n- To restore a previously created backup, copy the same text from the source you stored it in, then hit RESTORE(PASTE). All backup workouts will be added automatically.</string>
    <string name="create_backup">CREATE (COPY) from StrokeRateCoach</string>
    <string name="restore_backup">RESTORE (PASTE) to StrokeRateCoach</string>
    <string name="restore_result_text">Restore Result:</string>
    <string name="restore_added_text">Restored:</string>
    <string name="restore_failed_text">Failed:</string>
    <string name="restore_summary_text">"Summary: "</string>
    <string name="clear_history_title">Clear History?</string>
    <string name="clear_bin_title">Clear bin?</string>
</resources>