<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.batyanko.strokeratecoach.HelpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.batyanko.strokeratecoach.HelpActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_intro1"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_intro2"
            android:paddingBottom="5dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_intro3"
            android:paddingBottom="25dp"

            />

        <TextView
            android:id="@+id/how_to_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_big"
            android:text="@string/help_how_to_title"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_simple_beep1"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_simple_beep2"
            android:paddingBottom="5dp"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_preset1"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_preset2"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_speed1"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_speed2"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_speed3"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_create1"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_create2"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_text_size_small"
            android:text="@string/help_how_to_create3"
            android:paddingBottom="25dp"
            />

    </LinearLayout>

</ScrollView>