<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackupActivity">

    <TextView
        android:id="@+id/backup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/backup_title"
        android:textSize="@dimen/text_size_big"
        android:backgroundTint="@color/colorAccent"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/howto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/backup_howto"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backup_title" />

    <Button
        android:id="@+id/create_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/create_backup"
        android:textSize="@dimen/text_size_medium"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/howto" />

    <Button
        android:id="@+id/restore_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/restore_backup"
        android:textSize="@dimen/text_size_medium"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/create_backup" />

</androidx.constraintlayout.widget.ConstraintLayout>