<!--
     Copyright (C) 2017 Yanko Georgiev

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.batyanko.strokeratecoach.Fragments.SlideFragment"
    android:orientation="vertical">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.batyanko.strokeratecoach.Sliding.SlidingTabLayout
        android:id="@+id/sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_weight="1"
        />
</LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/adder_fab"
        app:fabSize="normal"
        android:scaleType="center"
        app:maxImageSize="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/create_workout_button_label"
        android:layout_margin="32dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clear_history_fab"
        app:fabSize="normal"
        android:scaleType="center"
        app:maxImageSize="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/clear_history_title"
        android:layout_margin="32dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clear_trash_fab"
        app:fabSize="normal"
        android:scaleType="center"
        app:maxImageSize="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/clear_bin_title"
        android:layout_margin="32dp" />

</RelativeLayout>
